# TMS-Flask

./: .env  .gitignore  Readme.MD  pyproject.toml  requirements.txt  wsgi.py
app/: __init__.py  db_models.py  forms.py  funcs.py  test-old.db  test.db
app/admin/: forms.py  routes.py
app/admin/static/: dashboard.css  sidebar.css  styles.css
app/admin/templates/admin/: add.html  addmaq.html  base.html  categorias.html  dashboard.html  dispositivos.html  edit.html  ferramentas.html  home.html  importar.html  insertos.html  items.html  maquinas.html  register.html  users.html
app/static/: main.js  plans.css  style.css
app/static/css/: inicio.css  style.css
app/static/js/: scripts.js
app/templates/: base.html  cancelled.html  dispositivo.html  edit.html  footer.html  home.html  index.html  inserto.html  item.html  login.html  maquina.html  plans.html  profileedit.html  register.html  success.html
instance/: test.db
tests/: test_app.py
