[tool.poetry]
name = "tms-flask"
version = "0.1.0"
description = ""
authors = ["Joel Paim <joellpaim@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
flask-wtf = "^1.2.1"
wtforms-alchemy = "^0.18.0"
flask-login = "^0.6.3"
pillow = "^10.2.0"
taskipy = "^1.12.2"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
stripe = "^8.4.0"
flask-bootstrap = "^3.3.7.1"
flask-sqlalchemy = "^3.1.1"
flask-mail = "^0.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
serve-local = "flask run --reload"
